Moved post files to the server side

--- a/service/package.json
+++ b/service/package.json
@@ -2,6 +2,7 @@
   "name": "tildes",
   "version": "1.0.0",
   "description": "Tilde Service",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
