--- a/service/package.json
+++ b/service/package.json
@@ -10,6 +10,7 @@
   "author": "Laurent Cimon",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-session": "^1.17.3"
   }
 }
